Replacing constructor usage with valueOf in most primitive wrappers