@@ -54,10 +54,10 @@ public class PercentageConverterFactory implements ConverterFactory {
             String number = s.substring(0, s.length() - 1);
             if (Double.class.equals(target)) {
                 double value = Double.valueOf(number);
-                return (T) new Double(value / 100);
+                return (T) Double.valueOf(value / 100);
             } else if (Float.class.equals(target)) {
                 float value = Float.valueOf(number);
-                return (T) new Float(value / 100);
+                return (T) Float.valueOf(value / 100);
             }
 
             return null;
