@@ -103,7 +103,7 @@ public final class RangedClassifier extends Classifier {
     private int classify(Comparable<?> val) {
         Comparable<?> value = val;
         if (val instanceof Integer) { // convert to double as java is stupid
-            value = new Double(((Integer) val).intValue());
+            value = Double.valueOf(((Integer) val).intValue());
         }
         // check each slot and see if: min <= value < max
         int last = min.length - 1;
