@@ -47,8 +47,8 @@ public class SimpleFeaturePropertyAccessorTest extends TestCase {
 
         SimpleFeatureBuilder builder = new SimpleFeatureBuilder(type);
         builder.add(Integer.valueOf(1));
-        builder.add(new Double(2.0));
-        builder.add(new Double(3.0));
+        builder.add(Double.valueOf(2.0));
+        builder.add(Double.valueOf(3.0));
 
         feature = (SimpleFeature) builder.buildFeature("fid");
         accessor = SimpleFeaturePropertyAccessorFactory.ATTRIBUTE_ACCESS;
@@ -79,8 +79,8 @@ public class SimpleFeaturePropertyAccessorTest extends TestCase {
         assertEquals(Integer.valueOf(1), accessor.get(feature, "sf:foo", null));
         assertEquals(Integer.valueOf(1), accessor.get(feature, "foo[1]", null));
         assertEquals(Integer.valueOf(1), accessor.get(feature, "sf:foo[1]", null));
-        assertEquals(new Double(2.0), accessor.get(feature, "bar", null));
-        assertEquals(new Double(3.0), accessor.get(feature, COMPLEX_PROPERTY, null));
+        assertEquals(Double.valueOf(2.0), accessor.get(feature, "bar", null));
+        assertEquals(Double.valueOf(3.0), accessor.get(feature, COMPLEX_PROPERTY, null));
         assertEquals(
                 "fid", SimpleFeaturePropertyAccessorFactory.FID_ACCESS.get(feature, "@id", null));
         assertEquals(
@@ -105,11 +105,11 @@ public class SimpleFeaturePropertyAccessorTest extends TestCase {
         assertEquals(Integer.valueOf(2), accessor.get(feature, "foo", null));
 
         try {
-            accessor.set(feature, "bar", new Double(1.0), null);
+            accessor.set(feature, "bar", Double.valueOf(1.0), null);
         } catch (IllegalAttributeException e) {
             fail();
         }
-        assertEquals(new Double(1.0), accessor.get(feature, "bar", null));
+        assertEquals(Double.valueOf(1.0), accessor.get(feature, "bar", null));
         try {
             accessor.set(feature, "@id", "fid2", null);
             fail("Should have thrown exception trying to set fid");
